# app/Http/Controllers/LoginController.php
@@ -7,48 +7,15 @@ use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Response;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Validation\ValidationException;
+use Knuckles\Scribe\Attributes\Group;
 
+#[Group('Auth')]
 class LoginController
 {
   /**
-   * @OA\Post(
-   *  path="/login",
-   *  summary="User login",
-   *  description="Authenticate user",
-   *  tags={"Auth"},
+   * Login endpoint
    *
-   *  @OA\RequestBody(
-   *    required=true,
-   *
-   *    @OA\JsonContent(
-   *      required={"email","password"},
-   *
-   *      @OA\Property(property="email", type="string", format="email", example="user@example.com"),
-   *      @OA\Property(property="password", type="string", format="password", example="password123")
-   *    ),
-   *  ),
-   *
-   *  @OA\Response(
-   *    response=200,
-   *    description="User is successfully logged in.",
-   *
-   *    @OA\JsonContent(
-   *
-   *      @OA\Property(property="success", type="boolean", example=true),
-   *    )
-   *  ),
-   *
-   *  @OA\Response(
-   *   response=422,
-   *   description="Laravel validation",
-   *
-   *   @OA\JsonContent(
-   *
-   *      @OA\Property(property="message", type="string"),
-   *    @OA\Property(property="errors", type="object")
-   *   )
-   *  ),
-   * ),
+   * This endpoint is used for user logging in.
    */
   public function __invoke(LoginRequest $request): JsonResponse
   {
