# app/Http/Requests/ChangeInitialPasswordRequest.php
@@ -4,25 +4,27 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
+#[BodyParam("password", "string", "New password", required: true, example: "password")]
+#[BodyParam("password_confirmation", "string", "New password confirmed", required: true, example: "password")]
 class ChangeInitialPasswordRequest extends FormRequest
 {
-    /**
+  /**
      * Determine if the user is authorized to make this request.
      */
-    public function authorize(): bool
-    {
-        return true;
-    }
+  public function authorize(): bool
+  {
+    return true;
+  }
 
-    /**
+  /**
      * Get the validation rules that apply to the request.
      *
      * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
      */
-    public function rules(): array
-    {
-        return [
-            'password' => ['required', 'string', 'min:8', 'max:256', 'confirmed'],
-        ];
-    }
+  public function rules(): array
+  {
+    return [
+      'password' => ['required', 'string', 'min:8', 'max:256', 'confirmed'],
+    ];
+  }
 }
