# app/Http/Requests/ChangePasswordRequest.php
@@ -3,26 +3,29 @@
 namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
+use Knuckles\Scribe\Attributes\BodyParam;
 
+#[BodyParam("password", "string", "New password", required: true, example: "password")]
+#[BodyParam("password_confirmation", "string", "New password confirmed", required: true, example: "password")]
 class ChangePasswordRequest extends FormRequest
 {
-    /**
+  /**
      * Determine if the user is authorized to make this request.
      */
-    public function authorize(): bool
-    {
-        return false;
-    }
+  public function authorize(): bool
+  {
+    return false;
+  }
 
-    /**
+  /**
      * Get the validation rules that apply to the request.
      *
      * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
      */
-    public function rules(): array
-    {
-        return [
-            //
-        ];
-    }
+  public function rules(): array
+  {
+    return [
+      'password' => ['required', 'string', 'min:8', 'max:256', 'confirmed'],
+    ];
+  }
 }
